[tool.poetry]
name = "devoff"
version = "0.1.0"
description = ""
authors = ["Cristian Mora <rapkyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
django-environ = "^0.4.5"
django-extensions = "^2.1"
django-storages = "^1.7"
django-model-utils = "^3.2"
djangorestframework = "^3.9"
django-ipware = "^2.1"
django-crispy-forms = "^1.7"
django-parler = "^1.9"
Django = "^2.1"
django-filer = "^1.5"
factory_boy = "^2.12.0"
django-cors-headers = "^3.3.0"
bpython = "^0.19"
psycopg2-binary = "^2.8.5"
django_redis_cache = "^2.1.1"
whitenoise = "^5.1.0"

[tool.poetry.dev-dependencies]
click = "^7.0"
klak = "^0.4.2"
mypy = "^0.711.0"
black = "19.3b0"
pdbpp = "^0.10.0"
pytest-django = "^3.5"
pytest-pythonpath = "^0.7.3"
django-debug-toolbar = "^2.0"
pytest = "^4.6"
pre-commit = "^2.5.1"
isort = "^4.3.21"
seed-isort-config = "^2.2.0"


[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
